<resources>

    <string name="api_key">AIzaSyBNuhDYASNL2gsT7be2gi7ApSop4HC4mNk</string>
    <!-- 主頁標記名稱 -->
    <string name="createPins">建立標記</string>
    <string name="showMap">地圖展示</string>
    <string name="database">資料庫</string>
    <string name="backupAndRestore">備份還原</string>
    <string name="exportCsv">Csv輸出</string>

    <string name="package_version_name">版本號碼</string>
    <string name="actionbar_main">主頁</string>
    <string name="actionbar_createPins">建立標記</string>
    <string name="actionbar_showMap">展示地圖</string>
    <string name="actionbar_editSearch">設定查詢條件</string>
    <string name="actionbar_showPins">標記查詢結果</string>
    <string name="actionbar_editPins">編輯標記</string>
    <string name="actionbar_backupAndRestore">資料備份/還原</string>
    <string name="actionbar_exportCsv">輸出Csv檔案</string>
    <string name="app_name">lifeMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_update_location">更新位置</string>
    <string name="title_current_location">目前位置</string>
    <string name="title_country">[標記國家]</string>
    <string name="title_activity_create_new_pin">createNewPin</string>
    <string name="title_remark_style">[標記圖形]</string>
    <string name="title_longitude">經度</string>
    <string name="title_latitude">緯度</string>
    <string name="title_pin_type">[標記類型]</string>
    <string name="message_current_location">目前位置訊息</string>
    <string name="message_update_location">更新位置訊息</string>
    <string name="all">全部</string>
    <string name="update">更新</string>
    <string name="clear">清除</string>
    <string name="cancel">取消</string>
    <string name="goBack">返回</string>
    <string name="pinTitle">標題</string>
    <string name="pinContent">內容</string>
    <string name="date">日期</string>
    <string name="dateTitle">[日期]</string>
    <string name="button_take_photo">照相</string>
    <string name="button_gps">定位</string>
    <string name="button_ok">確認</string>
    <string name="selection_cube">方形</string>
    <string name="selection_sphere">圓形</string>
    <string name="selection_attraction">景點</string>
    <string name="selection_food">美食</string>
    <string name="show_marker_image">標記示意圖</string>
    <string name="create_pin_btn">建立新標記</string>

    <!-- Country -->
    <string name="japan">日本</string>
    <string name="south_korea">南韓</string>
    <string name="united_kingdom">英國</string>
    <string name="united_states_of_america">美國</string>
    <string name="china">中國</string>
    <string name="france">法國</string>
    <string name="canada">加拿大</string>
    <string name="vietnam">越南</string>
    <string name="taiwan">台灣</string>
    <string name="egypt">埃及</string>
    <string name="australia">澳洲</string>
    <string name="germany">德國</string>
    <string name="hong_kong">香港</string>
    <string name="russia">俄羅斯</string>
    <string name="italy">義大利</string>
    <string name="new_zealand">紐西蘭</string>
    <string name="greece">希臘</string>
    <string name="thailand">泰國</string>
    
    <string-array name="type_selections">
        <item>全部</item>
        <item>景點</item>
        <item>美食</item>
    </string-array>

    <string name="choose">選擇</string>
    <string name="delete">刪除</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="null_data_info">查無資料</string>

    <!--=== Info / Msg ===-->
    <!-- MainActivity -->
    <string name="no_authorization_gps">請授權GPS定位</string>
    <!-- CreateNewPin -->
    <string name="create_success">建立成功</string>
    <string name="take_picture_fail">沒有拍到照片</string>
    <string name="gps_fail">GPS失敗</string>
    <string name="edit_none">未做修改</string>
    <!-- ShowMapActivity -->
    <string name="search_null">查無資料</string>
    <string name="selection_can_not_null">選項不可為空</string>
    <!-- BackupAndRestoreActivity -->
    <string name="backup_button">備份</string>
    <string name="backup_success">備份成功</string>
    <string name="backup_fail">備份失敗</string>
    <string name="restore_button">還原</string>
    <string name="restore_success">還原成功</string>
    <string name="restore_fail">還原失敗</string>
    <string name="lifeMap_folder_not_exist">LifeMap 資料夾不存在</string>
    <string name="backup_guideTitle">備份還原操作教學</string>
    <string name="backup_guideContent">
        <b><font color="#ff0000">※操作前提:新手機要先安裝程式\n\n</font></b>
        <b>Step-1.</b> 點擊\"備份\"的圖示按鈕\n\n
        <b><font color="#ff0000">※以下二選一\n\n</font></b>
        <b>Step-2.</b> 到手機儲存空間開啟\"LifeMap\"資料夾，將資料夾內的\"backup\"資料夾搬移到新手機\"LifeMap\"資料夾裡面\n\n
        <b>Step-2.</b> 將下載的Zip檔案解壓縮後，將\"backup\"資料夾搬移到新手機\"LifeMap\"資料夾裡面\n\n
        <b>Step-3.</b> 新手機開啟程式，點擊\"還原\"的圖示按鈕\n\n
        <b>Step-4.</b> 結束
    </string>
    <!-- EditPins -->
    <string name="delete_pin_success">刪除成功</string>
    <string name="edit_success">編輯成功</string>
    <string name="edit_fail">編輯失敗</string>
    <string name="dialog_delete_title">刪除確認</string>
    <string name="dialog_delete_info">是否刪除</string>
    <string name="item_count">資料數量</string>
    <!-- PickerView -->
    <string name="pickerView_title_country">選擇國家</string>
    <string name="pickerView_info_country">請選擇目前所在國家</string>
    <!-- Export Cvs -->
    <string name="cvs_title_name">標記名稱</string>
    <string name="cvs_position">經緯度</string>
    <string name="select_date_title">[起始日期]</string>
    <string name="how_to_create_googleMap_title">如何製作個人Google Map</string>
    <string name="how_to_create_googleMap_content">
        <b>Step-1.</b> 設定條件下載CSV檔案\n\n
        <b>Step-2.</b> 到Google雲端硬碟，操作新增→更多→我的地圖\n\n
        <b>Step-3.</b> 點擊新增圖層→匯入，選取下載的CSV\n\n
        <b>Step-4.</b> 選取要放置地標的欄位，勾選\"經緯度\"，選擇\"經度,緯度\"\n\n
        <b>Step-5.</b> 選取要放置標題的欄位，勾選\"標記名稱\"\n\n
        <b>Step-6.</b> 到各標記新增照片\n\n
        <b>Step-7.</b> 點擊分享，複製\"共用連結\"傳給想分享的人即可\n\n
        <b>Step-8.</b> 結束
    </string>


</resources>
